Use Fell typeface
Signed-off-by: Martin Sustrik <sustrik@250bpm.com>

--- a/main.css
+++ b/main.css
@@ -1,7 +1,7 @@
 body {
     width:50em;
     padding: 5em;
-    font-family: sans-serif;
+    font-family: 'IM Fell English', serif;
 }
 
 #toplist {
