--- a/main.css
+++ b/main.css
@@ -4,49 +4,11 @@ body {
     font-family: 'IM Fell English', serif;
 }
 
-#toplist {
-    padding-left: 0px;
-}
-
-#toplist li {
-    display: inline;
-    list-style-type: none;
-    padding-right: 15px;
-}
-
-#toplist a {
-    font-weight: bold;
-    color: red;
-    text-decoration: none;
-}
-
-#toc {
-    list-style-type: none;
-}
-
-#toc a {
-    text-decoration: none;
-}
-
-a {
-    color: black;
-}
-
-a.download {
-    color: red;
+h1 {
+    text-align: center;
 }
 
 p.lang {
     font-style: italic;
 }
 
-pre {
-    padding: 20px;
-    border: 1px dotted;
-    font-size: 120%
-} 
-
-.travis-widget {
-    border-style: none;
-    height: 32px;
-}
