Chessboard and grains
Signed-off-by: Martin Sustrik <sustrik@250bpm.com>

--- a/main.css
+++ b/main.css
@@ -9,4 +9,8 @@ h1 {
     text-align: center;
 }
 
-
+#code {
+#    padding: 20px;
+#    font-family: 'IM Fell English', serif;
+#    font-style: italic;
+#}
